[package]
name = "libpg_query-sys"
links = "pg_query"
description = "FFI bindings to libpg_query-10-1.0.2"
version = "0.1.0"
authors = ["Timothy Bess <tdbgamer@gmail.com>"]
build = "build.rs"
edition = "2018"
license = "MPL20"
repository = "https://github.com/tdbgamer/libpg_query-sys"

[build-dependencies]
bindgen = "0.45.0"
