[package]
name = "libpg_query-sys"
links = "pg_query"
description = "FFI bindings to libpg_query"
version = "0.3.0"
authors = ["Timothy Bess <tdbgamer@gmail.com>"]
build = "build.rs"
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/tdbgamer/libpg_query-sys"

[lib]
name = "libpg_query"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.60.1"
make-cmd = "0.1.0"

[workspace.metadata.release]
allow-branch = ["master"]
